--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "netlify-lambda build express",
     "start": "node server-local.js"
   },
+   "engines": {
+    "node": "18.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/neverendingqs/netlify-express.git"
