--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server-local.js"
   },
    "engines": {
-    "node": "18.x"
+    "node": "18.18.0"
   },
   "repository": {
     "type": "git",
