--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm install && npm run build"
+  command = "export NODE_OPTIONS='--openssl-legacy-provider' && npm install && npm run build"
   functions = "functions"
