--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,16 @@
-[build]
-  command = "export NODE_OPTIONS='--openssl-legacy-provider' && npm install && npm run build"
-  functions = "functions"
+[functions]
+  external_node_modules = [
+    "express",
+    "serverless-http",
+    "dotenv",
+    "path",
+    "body-parser",
+    "googleapis"
+  ]
+  node_bundler = "esbuild"
+
+[[redirects]]
+  force = true
+  from = "/api/*"
+  status = 200
+  to = "/.netlify/functions/api/:splat"
