--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
+  "name": "my-express-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "netlify dev"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@netlify/functions": "^4.2.5",
-    "body-parser": "^2.2.0",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "serverless-http": "^4.0.0"
+    "express": "^4.21.2",
+    "my-express-app": "file:",
+    "serverless-http": "^3.2.0"
   }
 }
