--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "netlify dev"
+    "start": "netlify dev",
+    "build": "echo 'No build step needed'"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "my-express-app": "file:",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "dotenv": "^16.4.5",
+    "body-parser": "^1.20.3",
+    "googleapis": "^144.0.0"
   }
 }
